Preview: Draw circles

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,9 +24,9 @@
     };
 
     .preview-matrix {
-        width: 200px;
-        height: 200px;
-        background: blue;
+        width: 120px;
+        height: 120px;
+        background: black;
     };
 }
 
