--- a/src/App.scss
+++ b/src/App.scss
@@ -34,6 +34,7 @@
         border-spacing: 2px;
         border-collapse: separate;
         border: solid #ccc 2px;
+        vertical-align: top;
 
         &.selected {
             border-color: dodgerblue;
