--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,13 @@
 .App {
-  text-align: center;
-  
-  .led-matrix {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    height: 100%;
+
+    .led-matrix {
+        flex: 0 1 auto;
         border-spacing: 5px;
         border-collapse: separate;
         background-color: #333;
@@ -28,12 +34,14 @@
             background: black;
         }
 
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+
         margin: 3px;
-        display: inline-block;
         border-spacing: 2px;
         border-collapse: separate;
         border: solid #ccc 2px;
-        vertical-align: top;
 
         &.selected {
             border-color: dodgerblue;
@@ -41,10 +49,19 @@
     };
 
     .previews {
+        width: 98%;
+        height: 290px;
+
+        flex: 0 0 auto;
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        align-items: flex-start;
+
         padding: 5px;
-        height: 200px;
-        overflow-y: scroll;
-        text-align: left;
+        overflow-y: auto;
         border: solid #999 1px;
         background: #ccc -webkit-linear-gradient(#ccc, #aaa);
         background: #ccc -moz-linear-gradient(#ccc, #aaa);
@@ -61,8 +78,12 @@
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
+  width: 100%;
+  padding: 20px 0px;
   color: white;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .App-intro {
@@ -74,14 +95,19 @@
   to { transform: rotate(360deg); }
 }
 
-html, body {
-    min-height: 100%;
+html, body, #root {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
-body {
+#root {
     background: #ccc linear-gradient(#eee, #ccc);
     user-select: none;
     -webkit-user-select: none;
+    display: flex;
+    flex-direction: column;
 }
 
 #input,
